@@ -1,5 +1,6 @@
 package ca.bc.gov.educ.api.distribution.process;
 
+import ca.bc.gov.educ.api.distribution.constants.SchoolCategoryCodes;
 import ca.bc.gov.educ.api.distribution.model.dto.*;
 import ca.bc.gov.educ.api.distribution.util.EducDistributionApiConstants;
 import ca.bc.gov.educ.api.distribution.util.EducDistributionApiUtils;
@@ -44,7 +45,7 @@ public class PSIReportProcess extends BaseProcess {
         DistributionResponse response = new DistributionResponse();
         response.setTransmissionMode(processorData.getTransmissionMode());
         DistributionRequest distributionRequest = processorData.getDistributionRequest();
-        Map<UUID, DistributionPrintRequest> mapDist = distributionRequest.getMapDist();
+        Map<String, DistributionPrintRequest> mapDist = distributionRequest.getMapDist();
         StudentSearchRequest searchRequest = distributionRequest.getStudentSearchRequest();
         Long batchId = processorData.getBatchId();
         int numberOfPdfs = 0;
@@ -53,16 +54,16 @@ public class PSIReportProcess extends BaseProcess {
         List<Integer> valueList = mapDist.values()
                 .stream()
                 .map(e -> e.getPsiCredentialPrintRequest().getPsiList().size())
-                .collect(Collectors.toList());
+                .toList();
         int studentsCount = valueList.stream().mapToInt(i->i).sum();
         log.debug("Total number of students to be processed: {}", studentsCount);
-        for (Map.Entry<UUID, DistributionPrintRequest> entry : mapDist.entrySet()) {
-            UUID psId = entry.getKey();
+        for (Map.Entry<String, DistributionPrintRequest> entry : mapDist.entrySet()) {
+            String psId = entry.getKey();
             counter++;
             int currentSlipCount = 0;
             DistributionPrintRequest distributionPrintRequest = mapDist.get(psId);
-            //psiCode = StringUtils.trim(psiCode);
-            Optional<Psi> psiDetailsOptional = psiService.getPsiDetails(psId.toString());
+
+            Optional<Psi> psiDetailsOptional = psiService.getPsiDetails(psId);
             if (psiDetailsOptional.isPresent()) {
                 Psi psiDetails = psiDetailsOptional.get();
                 log.debug("*** PSI Details Acquired {}", psiDetails.getPsiName());
@@ -121,7 +122,7 @@ public class PSIReportProcess extends BaseProcess {
                     processStudentsForCSVs(scdList, psiCode, processorData);
                 } else {
                     processStudentsForPDFs(processorData.getBatchId(), scdList, locations);
-                    mergeDocumentsPDFs(processorData, psiCode, "02", "/EDGRAD.T.",
+                    mergeDocumentsPDFs(processorData, psiCode, SchoolCategoryCodes.INDEPEND.getCode(), "/EDGRAD.T.",
                             "YED4", locations);
                 }
                 numOfPdfs++;
@@ -176,7 +177,7 @@ public class PSIReportProcess extends BaseProcess {
                     .concat(EducDistributionApiConstants.FILES_FOLDER_STRUCTURE)
                     .concat(transmissionMode.toUpperCase());
             StringBuilder filePathBuilder = createFolderStructureInTempDirectory(rootDirectory, processorData,
-                    psiCode, "02");
+                    psiCode, SchoolCategoryCodes.INDEPEND.getCode());
             filePathBuilder.append(EducDistributionApiConstants.FTP_FILENAME_PREFIX)
                     .append(psiCode)
                     .append(EducDistributionApiConstants.FTP_FILENAME_SUFFIX).append(".")
